Styling to avoid wrapping and make button look more like a button

--- a/app/assets/stylesheets/pages/issues.scss
+++ b/app/assets/stylesheets/pages/issues.scss
@@ -240,7 +240,6 @@ ul.related-merge-requests > li {
   }
 
   .create-merge-request-dropdown-menu {
-    width: 300px;
     opacity: 1;
     visibility: visible;
     transform: translateY(0);
